linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    foo: bar
  name: lmi-ns01
