linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/chainsaw-step-02-apply-4.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    config.linkerd.io/proxy-await: disabled
  name: lmi-ns04
