linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/chainsaw-step-02-apply-5.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    linkerd.io/inject: disabled
  name: lmi-ns05
