linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/exception-sibling.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-exception-sibling
  annotations: {}
