linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/chainsaw-step-02-assert-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    config.linkerd.io/proxy-await: enabled
    linkerd.io/inject: enabled
  name: lmi-ns02
