linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/chainsaw-step-02-assert-5.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    config.linkerd.io/proxy-await: enabled
    linkerd.io/inject: disabled
  name: lmi-ns05
