linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/exception-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-exception-ns
  annotations: {}
