linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/exception-expected.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-exception-ns
(!contains(keys(metadata.annotations || `{}`), 'linkerd.io/inject') && !contains(keys(metadata.annotations || `{}`), 'config.linkerd.io/proxy-await')): true
