linkerd-mpol/add-linkerd-mesh-injection/.chainsaw-test/exception-sibling-expected.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-exception-sibling
  annotations:
    linkerd.io/inject: enabled
    config.linkerd.io/proxy-await: enabled
